<resources>
    <string name="app_name">LivePictures</string>

    <string name="frame_list_title">Frame List</string>
    <string name="frame_list_item_title">Frame #%s</string>

    <string name="tooltip_undo">Undo</string>
    <string name="tooltip_redo">Redo</string>
    <string name="tooltip_delete_frame">Delete frame</string>
    <string name="tooltip_new_frame">New Frame</string>
    <string name="tooltip_show_frames">Show frames</string>
    <string name="tooltip_start_animation">Start animation</string>
    <string name="tooltip_stop_animation">Stop animation</string>
    <string name="tooltip_tool_pencil">Pencil</string>
    <string name="tooltip_tool_erase">Erase tool</string>
    <string name="tooltip_tool_shape_picker">Shape picker</string>
    <string name="tooltip_tool_color_picker">Color Picker</string>
    <string name="tooltip_tool_cmd_list">Frame\'s drawn commands</string>
    <string name="tooltip_next_frame">Next Frame</string>
    <string name="tooltip_prev_frame">Previous Frame</string>
    <string name="tooltip_more_menu">More menu</string>
    <string name="tooltip_confirm_changes">Confirm changes</string>
    <string name="tooltip_discard_changes">Discard changes</string>
    <string name="tooltip_delete_command">Delete command</string>

    <string name="more_animation_speed">Animation Speed</string>
    <string name="more_duplicate_frame">Duplicate Frame</string>
    <string name="more_export">Export as GIF</string>
    <string name="more_generate">Generate Frames</string>
    <string name="more_delete_all">Delete All</string>

    <string name="tooltip_shape_square">Square</string>
    <string name="tooltip_shape_circle">Circle</string>
    <string name="tooltip_shape_triangle">Triangle</string>

    <string name="tooltip_shape_square_filled">Filled Square</string>
    <string name="tooltip_shape_circle_filled">Filled Circle</string>
    <string name="tooltip_shape_triangle_filled">Filled Triangle</string>

    <string name="color_picker_selected_color">Selected Color:</string>
    <string name="color_picker_button_submit">Submit</string>

    <string name="cmd_list_title">Commands List</string>
    <string name="cmd_list_empty">Nothing has been drawn yet</string>

    <string name="toast_new_frame_created">New frame is created</string>
    <string name="toast_frame_duplicated">Current frame is duplicated</string>
    <string name="toast_export_successful">Exported to: %s</string>
    <string name="toast_export_unsuccessful">Error: %s</string>

    <string name="frame_duration_title">Frame duration</string>
    <string name="frame_duration_duration">Duration: %sms</string>

    <string name="dialog_frame_builder_edit_hint">Enter frame count</string>
    <string name="dialog_frame_builder_message">Entering large number will consume a lot of storage. The total amount of frames should be less than Int.MAX_VALUE since database cursor can operate only with Int index</string>
    <string name="dialog_frame_builder_input_error">Wrong input</string>

    <string name="loader_generating">Generation…</string>
    <string name="loader_exporting">Exporting…</string>


</resources>