<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topToolPanel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="@id/topContainerBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/undo"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_undo"
                android:tooltipText="@string/tooltip_undo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/redo"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_redo"
                android:tooltipText="@string/tooltip_redo"
                app:layout_constraintStart_toEndOf="@id/undo"
                app:layout_constraintTop_toTopOf="@id/undo" />

            <ImageView
                android:id="@+id/deleteFrame"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_frame"
                android:tooltipText="@string/tooltip_delete_frame"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/newFrame"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/newFrame"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/ic_new_frame"
                android:tooltipText="@string/tooltip_new_frame"
                app:layout_constraintEnd_toStartOf="@id/frameList"
                app:layout_constraintStart_toEndOf="@id/deleteFrame"
                app:layout_constraintTop_toTopOf="@id/deleteFrame" />

            <ImageView
                android:id="@+id/frameList"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_frame_list"
                android:tooltipText="@string/tooltip_show_frames"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/newFrame"
                app:layout_constraintTop_toTopOf="@id/deleteFrame" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editCmdPanel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/topContainerBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/discardChanges"
                style="@style/ToolButton.Tintable"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_discard"
                android:tooltipText="@string/tooltip_discard_changes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/confirmChanges"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/confirmChanges"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/ic_confirm"
                android:tooltipText="@string/tooltip_confirm_changes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/discardChanges"
                app:layout_constraintTop_toTopOf="@id/discardChanges" />

            <ImageView
                android:id="@+id/deleteCmd"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_frame"
                android:tooltipText="@string/tooltip_delete_command"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/discardChanges" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/play"
            style="@style/ToolButton.Tintable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_play"
            android:tooltipText="@string/tooltip_start_animation"
            app:layout_constraintBottom_toBottomOf="@id/topContainerBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topContainerBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="56dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomContainerTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="56dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startEdge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endEdge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/canvasBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/canvas"
            app:layout_constraintBottom_toTopOf="@id/prevFrame"
            app:layout_constraintEnd_toEndOf="@id/endEdge"
            app:layout_constraintStart_toStartOf="@id/startEdge"
            app:layout_constraintTop_toBottomOf="@id/topContainerBottom" />

        <com.blizniuk.livepictures.view.CanvasView
            android:id="@+id/canvasView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/canvasBackground"
            app:layout_constraintEnd_toEndOf="@id/canvasBackground"
            app:layout_constraintStart_toStartOf="@id/canvasBackground"
            app:layout_constraintTop_toTopOf="@id/canvasBackground" />

        <ImageView
            android:id="@+id/prevFrame"
            style="@style/ToolButton.Tintable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_prev_frame"
            android:tooltipText="@string/tooltip_prev_frame"
            app:layout_constraintEnd_toStartOf="@id/currentFrameIndexHiddenWidth"
            app:layout_constraintTop_toTopOf="@id/counterAnchor" />

        <TextView
            android:id="@+id/currentFrameIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/frameCounterDivider"
            app:layout_constraintTop_toTopOf="@id/frameCounterDivider"
            tools:text="2" />

        <TextView
            android:id="@+id/currentFrameIndexHiddenWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/currentFrameIndex"
            app:layout_constraintTop_toTopOf="@id/currentFrameIndex"
            tools:text="2" />

        <Space
            android:id="@+id/counterAnchor"
            style="@style/ToolButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@id/toolConfigPaneAnchor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/frameCounterDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / "
            app:layout_constraintBottom_toBottomOf="@id/counterAnchor"
            app:layout_constraintEnd_toEndOf="@id/counterAnchor"
            app:layout_constraintStart_toStartOf="@id/counterAnchor"
            app:layout_constraintTop_toTopOf="@id/counterAnchor"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/totalFrames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/frameCounterDivider"
            app:layout_constraintTop_toTopOf="@id/frameCounterDivider"
            tools:text="1234" />

        <ImageView
            android:id="@+id/nextFrame"
            style="@style/ToolButton.Tintable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next_frame"
            android:tooltipText="@string/tooltip_next_frame"
            app:layout_constraintStart_toEndOf="@id/totalFrames"
            app:layout_constraintTop_toTopOf="@id/prevFrame" />

        <Space
            android:id="@+id/toolConfigPaneAnchor"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="@id/bottomContainerTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <FrameLayout
            android:id="@+id/toolConfigPane"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/toolConfigPaneAnchor"
            app:layout_constraintTop_toTopOf="@id/toolConfigPaneAnchor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.blizniuk.livepictures.view.ThicknessSeekBar
                android:id="@+id/penThicknessPicker"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <com.blizniuk.livepictures.view.ThicknessSeekBar
                android:id="@+id/eraseThicknessPicker"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomToolPanel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottomContainerTop">

            <ImageView
                android:id="@+id/openCmdList"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tool_cmd_list"
                android:tooltipText="@string/tooltip_tool_pencil"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pencil"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:src="@drawable/ic_tool_pencil"
                android:tooltipText="@string/tooltip_tool_pencil"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/erase"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/erase"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:src="@drawable/ic_tool_erase"
                android:tooltipText="@string/tooltip_tool_erase"
                app:layout_constraintEnd_toStartOf="@id/shapePicker"
                app:layout_constraintStart_toEndOf="@id/pencil"
                app:layout_constraintTop_toTopOf="@id/pencil" />

            <ImageView
                android:id="@+id/shapePicker"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:src="@drawable/ic_tool_shapes"
                android:tooltipText="@string/tooltip_tool_shape_picker"
                app:layout_constraintEnd_toStartOf="@id/colorPicker"
                app:layout_constraintStart_toEndOf="@id/erase"
                app:layout_constraintTop_toTopOf="@id/pencil" />

            <FrameLayout
                android:id="@+id/colorPicker"
                style="@style/ToolButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:tooltipText="@string/tooltip_tool_color_picker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/shapePicker"
                app:layout_constraintTop_toTopOf="@id/pencil">

                <ImageView
                    android:id="@+id/chosenColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/color_picker_tool_color" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/color_picker_tool_border" />
            </FrameLayout>

            <ImageView
                android:id="@+id/moreMenu"
                style="@style/ToolButton.Tintable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings"
                android:tooltipText="@string/tooltip_more_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loaderContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loader_overlay"
        android:visibility="gone"
        android:clickable="true">

        <androidx.core.widget.ContentLoadingProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="center" />

    </FrameLayout>
</FrameLayout>